crates/loxide_interpreter/tests/snapshots/integration@for__return_closure.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
---
fun f() {
  for (;;) {
    var i = "i";
    fun g() { print i; }
    return g;
  }
}


var h = f();

h(); // expect: i
// => str(i)
