crates/loxide_interpreter/tests/snapshots/integration@for__return_inside.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
---
fun f() {
  for (;;) {
    var i = "i";
    return i;
  }
}


print f();
// => str(i)
// expect: i
