crates/loxide_interpreter/tests/snapshots/integration@for__statement_increment.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
snapshot_kind: text
---
// [line 2] Error at '{': Expect expression.
for (var a = 1; a < 2; {}) {}

>>>>> Error Section <<<<<

  × Expected token `primary expression`, found {
   ╭─[2:24]
 1 │ // [line 2] Error at '{': Expect expression.
 2 │ for (var a = 1; a < 2; {}) {}
   ·                        ┬
   ·                        ╰── expected `primary expression`, found {
   ╰────
